src/test/contracts/negative/entrypoint_no_type.jsligo
type organization = {
   name : string,
   admins : int,
};
type storage = int;

// @entry
const unique = (_ : organization, _ : storage) => {
    return failwith("You need to be part of Tezos organization to activate an organization");
};
